tests/core/error/expression-multiplicative-2.rq
SELECT (2 / 'a' AS ?op) { }
